--- a/contacto.html
+++ b/contacto.html
@@ -20,11 +20,11 @@
             </div>
             <div class="col-md-6 mt-4 mt-md-0">
                 <nav class="nav nav-sociales justify-content-center justify-content-md-end">
-                    <a href="facebook.com" class="nav-link" target="_blank"></a>
-                    <a href="twitter.com" class="nav-link" target="_blank"></a>
-                    <a href="instagram.com" class="nav-link" target="_blank"></a>
-                    <a href="pinterest.com" class="nav-link" target="_blank"></a>
-                    <a href="youtube.com" class="nav-link" target="_blank"></a>
+                    <a href="http://facebook.com" class="nav-link" target="_blank"></a>
+                    <a href="http://twitter.com" class="nav-link" target="_blank"></a>
+                    <a href="http://instagram.com" class="nav-link" target="_blank"></a>
+                    <a href="http://pinterest.com" class="nav-link" target="_blank"></a>
+                    <a href="http://youtube.com" class="nav-link" target="_blank"></a>
                 </nav>
             </div>
         </div>
