--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
               <h2 class="text-center text-uppercase my-4">Contacto</h2>
               <p class="text-center mb-2">66 East Sunnyslope Avenue <br>Lansdowne, PA 19050</p>
               <nav class="nav nav-sociales justify-content-center">
-                  <a href="facebook.com" class="nav-link" target="_blank"></a>
-                  <a href="twitter.com" class="nav-link" target="_blank"></a>
-                  <a href="instagram.com" class="nav-link" target="_blank"></a>
-                  <a href="pinterest.com" class="nav-link" target="_blank"></a>
-                  <a href="youtube.com" class="nav-link" target="_blank"></a>
+                  <a href="http://facebook.com" class="nav-link" target="_blank"></a>
+                  <a href="http://twitter.com" class="nav-link" target="_blank"></a>
+                  <a href="http://instagram.com" class="nav-link" target="_blank"></a>
+                  <a href="http://pinterest.com" class="nav-link" target="_blank"></a>
+                  <a href="http://youtube.com" class="nav-link" target="_blank"></a>
               </nav>
           </div>
         </div>
